fix(header): fix header wrap

--- a/src/app/app.css
+++ b/src/app/app.css
@@ -7,7 +7,7 @@
 }
 
 .header .clear-header-space {
-  height: 360px;
+  height: 330px;
 }
 
 .header.sticky .clear-header-space {
